--- a/helloASP/Views/Home/Index.cshtml
+++ b/helloASP/Views/Home/Index.cshtml
@@ -8,8 +8,8 @@
 
         <div class="box-part text-center">
 
-            <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
-
+            @*<i class="fa fa-instagram fa-3x" aria-hidden="true"></i>*@
+            <img src="https://envyleather.com/wp-content/uploads/2019/05/DSC_7081-940x1200.png" width="100%" alt="Чокер"/> 
             <div class="title">
                 <h4>Instagram</h4>
             </div>
@@ -27,10 +27,12 @@
 
         <div class="box-part text-center">
 
-            <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
+            @*<i class="fa fa-twitter fa-3x" aria-hidden="true"></i>*@
+
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcROdv7xCeP6ognq2L1TnfcEFPiry0CX0_Io231fy3-FmrMQel7j" width="100%" alt="Чокер" />
 
             <div class="title">
-                <h4>Twitter</h4>
+                <h4>Браслет</h4>
             </div>
 
             <div class="text">
