Create Category & show list category

--- a/helloASP/Views/Shared/_Layout.cshtml
+++ b/helloASP/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Про нас", "About", "Home")</li>
+                    <li>@Html.ActionLink("Категорії", "Index", "Category")</li>
                     <li>@Html.ActionLink("Контакти", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
