create with image

--- a/helloASP/Views/Shared/_Layout.cshtml
+++ b/helloASP/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Про нас", "About", "Home")</li>
                     <li>@Html.ActionLink("Категорії", "Index", "Category")</li>
+                    <li>@Html.ActionLink("Засоби Самооборони", "Index", "SelfDefense")</li>
                     <li>@Html.ActionLink("Контакти", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
