--- a/helloASP/Views/Home/Index.cshtml
+++ b/helloASP/Views/Home/Index.cshtml
@@ -8,15 +8,17 @@
             <tr>
                 <th scope="col">Id</th>
                 <th scope="col">Email</th>
+                <th scope="col">Roles</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var user in Model)
             {
-                <tr>
-                    <th scope="row">@user.Id</th>
-                    <td>@user.Email</td>
-                </tr>
+            <tr>
+                <th scope="row">@user.Id</th>
+                <td>@user.Email</td>
+                <td>@user.Roles.Count</td>
+            </tr>
             }
 
 
