--- a/helloASP/Views/Shared/_Layout.cshtml
+++ b/helloASP/Views/Shared/_Layout.cshtml
@@ -6,9 +6,6 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     <style>
-        
-
-
     </style>
     @Scripts.Render("~/bundles/modernizr")
 
@@ -27,7 +24,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Про нас", "About", "Home")</li>
-                    <li>@Html.ActionLink("Категорії", "Index", "Category")</li>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <li>@Html.ActionLink("Категорії", "Index", "Category")</li>
+                    }
                     <li>@Html.ActionLink("Контакти", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
