Add Post create edit show

--- a/helloASP/Views/Shared/_Layout.cshtml
+++ b/helloASP/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                     }
                     <li>@Html.ActionLink("Контакти", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Froala", "Index", "Editor")</li>
+                    <li>@Html.ActionLink("Пости", "Index", "Post")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
